--- a/Projecten/.htaccess
+++ b/Projecten/.htaccess
@@ -1,9 +1,3 @@
-# enable mod_rewrite
 RewriteEngine On
-
-# RewriteCond = define rule condition
-# HTTP_REFERER = check from where the request originated
-# ! = exclude 
-# ^ = start of string
-# [NC] = case insensitive search
-RewriteCond %{HTTP_REFERER} !^http:
+RewriteBase /Projecten/
+RewriteRule service index.php [L,QSA]
